src/v8/CAPI_Monitors.pas

UNIT CAPI_Monitors;
{$inline on}

INTERFACE

USES CAPI_Utils;

PROCEDURE Monitors_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
PROCEDURE Monitors_Get_AllNames_GR();cdecl;
function Monitors_Get_FileName():PAnsiChar;cdecl;
function Monitors_Get_First():Integer;cdecl;
function Monitors_Get_Mode():Integer;cdecl;
function Monitors_Get_Name():PAnsiChar;cdecl;
function Monitors_Get_Next():Integer;cdecl;
procedure Monitors_Reset();cdecl;
procedure Monitors_ResetAll();cdecl;
procedure Monitors_Sample();cdecl;
procedure Monitors_Save();cdecl;
procedure Monitors_Set_Mode(Value: Integer);cdecl;
procedure Monitors_Show();cdecl;
procedure Monitors_Set_Name(const Value: PAnsiChar);cdecl;
PROCEDURE Monitors_Get_ByteStream(var ResultPtr: PByte; ResultCount: PInteger);cdecl;
PROCEDURE Monitors_Get_ByteStream_GR();cdecl;
function Monitors_Get_SampleCount():Integer;cdecl;
procedure Monitors_SampleAll();cdecl;
procedure Monitors_SaveAll();cdecl;
function Monitors_Get_Count():Integer;cdecl;
procedure Monitors_Process();cdecl;
procedure Monitors_ProcessAll();cdecl;
PROCEDURE Monitors_Get_Channel(var ResultPtr: PDouble; ResultCount: PInteger; Index: Integer);cdecl;
PROCEDURE Monitors_Get_Channel_GR(Index: Integer);cdecl;
PROCEDURE Monitors_Get_dblFreq(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Monitors_Get_dblFreq_GR();cdecl;
PROCEDURE Monitors_Get_dblHour(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
PROCEDURE Monitors_Get_dblHour_GR();cdecl;
function Monitors_Get_FileVersion():Integer;cdecl;
PROCEDURE Monitors_Get_Header(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
PROCEDURE Monitors_Get_Header_GR();cdecl;
function Monitors_Get_NumChannels():Integer;cdecl;
function Monitors_Get_RecordSize():Integer;cdecl;
function Monitors_Get_Element():PAnsiChar;cdecl;
procedure Monitors_Set_Element(const Value: PAnsiChar);cdecl;
function Monitors_Get_Terminal():Integer;cdecl;
procedure Monitors_Set_Terminal(Value: Integer);cdecl;

IMPLEMENTATION

USES CAPI_Constants, Monitor, DSSGlobals, SysUtils, Classes, Math;


Type THeaderRec = Record
        Signature  : Integer;
        Version    : Integer;
        RecordSize : Integer;
        Mode       : Integer;
        StrBuffer  : TMonitorStrBuffer;
      End;

     SingleArray  = Array[1..100] of Single;
     pSingleArray = ^SingleArray;
        Procedure ReadMonitorHeader(Var HeaderRec:THeaderRec; Opt:Boolean);
VAR
    pMon : TMonitorObj;

Begin
   pMon := ActiveCircuit[ActiveActor].Monitors.Active;
   TRY
       With pmon.MonitorStream, HeaderRec Do
         Begin
           Seek(0,           classes.soFromBeginning  );
           Read( signature,  Sizeof(signature));    // Signature   (32 bit Integer )
           Read( version,    Sizeof(version));        // Version     (32 bit Integer )
           Read( RecordSize, Sizeof(RecordSize));    // RecordSize  (32 bit Integer )
           Read( Mode,       Sizeof(Mode));                // Mode        (32 bit Integer )
           Read( StrBuffer,  Sizeof(TMonitorStrBuffer)); // String      (255 char string)
         End;

   FINALLY
          // If opt is false leave monitorstream at end of header record
          If Opt Then pmon.MonitorStream.Seek(0, soFromEnd);    // put monitor stream pointer back where it was
   END;


End;
//------------------------------------------------------------------------------
PROCEDURE Monitors_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
VAR
  Result: PPAnsiCharArray;
  MonitorElem:TMonitorObj;
  k:Integer;

Begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    IF ActiveCircuit[ActiveActor] <> Nil THEN
     WITH ActiveCircuit[ActiveActor] DO
     If Monitors.ListSize>0 Then
     Begin
       DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (Monitors.ListSize-1) + 1);
       k:=0;
       MonitorElem := Monitors.First;
       WHILE MonitorElem<>Nil DO Begin
          Result[k] := DSS_CopyStringAsPChar(MonitorElem.Name);
          Inc(k);
          MonitorElem := Monitors.Next;
       End;
     End;
end;
PROCEDURE Monitors_Get_AllNames_GR();cdecl;
// Same as Monitors_Get_AllNames but uses global result (GR) pointers
begin
   Monitors_Get_AllNames(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function Monitors_Get_FileName_AnsiString():AnsiString;inline;
Var
   pMon:TMonitorObj;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then Result := PMon.Get_FileName(ActiveActor)
        Else Result := '';
   End;

end;

function Monitors_Get_FileName():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Monitors_Get_FileName_AnsiString());
end;
//------------------------------------------------------------------------------
function Monitors_Get_First():Integer;cdecl;
Var
   pMon:TMonitorObj;

Begin

     Result := 0;
   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.First;
        If pMon <> Nil Then
        Begin
          Repeat
            If pMon.enabled
            then Begin
              ActiveCircuit[ActiveActor].ActiveCktElement := pMon;
              Result := 1;
            End
            Else  pMon := ActiveCircuit[ActiveActor].Monitors.Next;
          Until (Result = 1) or (pMon = nil);
        End
        Else
            Result := 0;  // signify no more
   End;

end;
//------------------------------------------------------------------------------
function Monitors_Get_Mode():Integer;cdecl;
Var
   pMon:TMonitorObj;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then Result := PMon.Mode
        Else Result := 0;
   End;

end;
//------------------------------------------------------------------------------
function Monitors_Get_Name_AnsiString():AnsiString;inline;
Var
   pMon:TMonitorObj;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then Result := PMon.Name
        Else Result := '';
   End;

end;

function Monitors_Get_Name():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Monitors_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function Monitors_Get_Next():Integer;cdecl;
Var
   pMon:TMonitorObj;

Begin

   Result := 0;
   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Next;
        If pMon <> Nil Then
        Begin
          Repeat
            If pMon.Enabled
            Then Begin
              ActiveCircuit[ActiveActor].ActiveCktElement := pMon;
              Result := 1;
            End
            Else  pMon := ActiveCircuit[ActiveActor].Monitors.Next;
          Until (Result > 0) or (pMon = nil);
        End
        Else
            Result := 0;  // signify no more
   End;


end;
//------------------------------------------------------------------------------
procedure Monitors_Reset();cdecl;
Var
   pMon:TMonitorObj;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then PMon.ResetIt(ActiveActor);
   End;

end;
//------------------------------------------------------------------------------
procedure Monitors_ResetAll();cdecl;
Begin
     If ActiveCircuit[ActiveActor] <> Nil Then Begin
        MonitorClass[ActiveActor].ResetAll(ActiveActor);
     End;
end;
//------------------------------------------------------------------------------
procedure Monitors_Sample();cdecl;
Var
   pMon:TMonitorObj;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then PMon.TakeSample(ActiveActor);
   End;

end;
//------------------------------------------------------------------------------
procedure Monitors_Save();cdecl;
Var
   pMon:TMonitorObj;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then PMon.Save;  // TranslateToCSV(False);
   End;

end;
//------------------------------------------------------------------------------
procedure Monitors_Set_Mode(Value: Integer);cdecl;
Var
   pMon:TMonitorObj;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then
        Begin
          PMon.Mode := Value;
          PMon.ResetIt(ActiveActor);  // Always reset the monitor after a Mode change
        End;
   End;

end;
//------------------------------------------------------------------------------
procedure Monitors_Show();cdecl;
Var
   pMon:TMonitorObj;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then PMon.TranslateToCSV(True, ActiveActor);
   End;

end;
//------------------------------------------------------------------------------
procedure Monitors_Set_Name(const Value: PAnsiChar);cdecl;
VAR
    activesave :integer;
    Mon:TMonitorObj;
    S: String;
    Found :Boolean;
Begin


  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin      // Search list of monitors in active circuit for name
       WITH ActiveCircuit[ActiveActor].Monitors DO
       Begin
         S := Value;  // Convert to Pascal String
         Found := FALSE;
         ActiveSave := ActiveIndex;
         Mon := First;
         While Mon <> NIL Do Begin
            IF (CompareText(Mon.Name, S) = 0) THEN Begin
                ActiveCircuit[ActiveActor].ActiveCktElement := Mon;
                Found := TRUE;
                Break;
            End;
            Mon := Next;
         End;
         IF NOT Found THEN Begin
             DoSimpleMsg('Monitor "'+S+'" Not Found in Active Circuit.', 5004);
             Mon := Get(ActiveSave);    // Restore active Monerator
             ActiveCircuit[ActiveActor].ActiveCktElement := Mon;
         End;
       End;
  End;


end;
//------------------------------------------------------------------------------
PROCEDURE Monitors_Get_ByteStream(var ResultPtr: PByte; ResultCount: PInteger);cdecl;
VAR
  Result: PByteArray;
   pMon:TMonitorObj;
   p:Pointer;

Begin

   If ActiveCircuit[ActiveActor] <> Nil Then
   Begin
        pMon := ActiveCircuit[ActiveActor].Monitors.Active;
        If PMon <> Nil Then Begin
          Result := DSS_RecreateArray_PByte(ResultPtr, ResultCount, (pmon.MonitorStream.Size -1) + 1);
          pmon.MonitorStream.Seek(0, soFromBeginning);
          p := ResultPtr;
          pmon.MonitorStream.Read(p^, pmon.MonitorStream.Size);   // Move it all over
          // leaves stream at the end
          // VarArrayUnlock(Result);
        End
        Else
             Result := DSS_RecreateArray_PByte(ResultPtr, ResultCount, (0) + 1);
   End;

end;
PROCEDURE Monitors_Get_ByteStream_GR();cdecl;
// Same as Monitors_Get_ByteStream but uses global result (GR) pointers
begin
   Monitors_Get_ByteStream(GR_DataPtr_PByte, GR_CountPtr_PByte)
end;
